clean up front end, add time and redirect back to profile after transfer

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -38,6 +38,9 @@
                              <td>
                                desciption: <%= user.local.transactions[i].description%>,<br>
                              </td>
+                             <td>
+                               date: <%= user.local.transactions[i].date%>,<br>
+                             </td>
                            </tr>
                         <% } %>
                     </p>
