convert to bootstratp

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,7 @@
 <html>
 <head>
     <title>Node Authentication</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+ <link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
     <style>
         body         { padding-top:80px; }
     </style>
@@ -11,14 +10,16 @@
 <body>
 <div class="container">
 
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
+    <div class="medium-10 columns medium-centered text-center panel">
+        <h1>Node Authentication</h1>
 
         <p>Login or Register with:</p>
 
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
+        <a href="/login" class="button">Local Login</a>
     </div>
 
 </div>
+<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
+<script src='http://cdn.foundation5.zurb.com/foundation.js'></script>
 </body>
 </html>
