--- a/views/connect-local.ejs
+++ b/views/connect-local.ejs
@@ -2,46 +2,43 @@
 <html>
 <head>
     <title>Node Authentication</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+ <link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
     <style>
         body         { padding-top:80px; }
     </style>
 </head>
 <body>
 <div class="container">
-<div class="col-sm-6 col-sm-offset-3">
+<div class="medium-5 medium-centered columns">
 
-    <h1><span class="fa fa-user"></span> Add Local Account</h1>
+    <h1> Add Local Account</h1>
 
     <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
+        <div class="<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
+<script src='http://cdn.foundation5.zurb.com/foundation.js'></script>"><%= message %></div>
     <% } %>
 
     <!-- LOGIN FORM -->
     <form action="/connect/local" method="post">
-        <div class="form-group">
+        <div>
             <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <input type="text"name="email">
         </div>
-        <div class="form-group">
+        <div>
             <label>Password</label>
-            <input type="password" class="form-control" name="password">
+            <input type="password"name="password">
         </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Add Local</button>
+        <button type="submit" class="button">Add Local</button>
     </form>
 
     <hr>
 
     <p><a href="/profile">Go back to profile</a></p>
 
-    <div class="text-center">
-        <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
-        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
-    </div>
-
 </div>
 </div>
+<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
+<script src='http://cdn.foundation5.zurb.com/foundation.js'></script>
 </body>
 </html>
