--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,34 +2,33 @@
 <html>
 <head>
     <title>Node Authentication</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
     <style>
         body         { padding-top:80px; }
     </style>
 </head>
 <body>
 <div class="container">
-<div class="col-sm-6 col-sm-offset-3">
+<div class="small-6 columns small-centered">
 
-    <h1><span class="fa fa-sign-in"></span> Signup</h1>
+    <h1>Signup</h1>
 
     <% if (message.length > 0) { %>
-        <div class="alert alert-danger"><%= message %></div>
+        <div class="alert-message warning"><%= message %></div>
     <% } %>
 
     <!-- LOGIN FORM -->
     <form action="/signup" method="post">
-        <div class="form-group">
+        <div>
             <label>Email</label>
-            <input type="text" class="form-control" name="email">
+            <input type="text"name="email">
         </div>
         <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" name="password">
+            <input type="password"name="password">
         </div>
 
-        <button type="submit" class="btn btn-warning btn-lg">Signup</button>
+        <button type="submit" class="button">Signup</button>
     </form>
 
     <hr>
@@ -37,12 +36,9 @@
     <p>Already have an account? <a href="/login">Login</a></p>
     <p>Or go <a href="/">home</a>.</p>
 
-    <div class="text-center">
-        <p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
-        <p>Visit the <a href="http://scotch.io/tutorials/javascript/easy-node-authentication-setup-and-local">tutorial</a>.</p>
-    </div>
-
 </div>
 </div>
+<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
+<script src='http://cdn.foundation5.zurb.com/foundation.js'></script>
 </body>
 </html>
